<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Labels -->
    <string name="app_name">Andrew</string>
    <string name="action_settings">Settings</string>
    <string name="label_coordinates">Coordinates: </string>
    <string name="label_address">Address: </string>
    <string name="label_unknown">Unknown</string>
    <string name="label_connected">Connected</string>
    <string name="label_disconnected">Disconnected</string>
    <string name="label_get_coordinates">Get Coordinates</string>
    <string name="label_get_address">Get Address</string>
    
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>
    
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.2f, %2$.2f</string>
    

</resources>
