<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/label_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_coordinates" />
    
    <TextView 
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_coordinates"
        android:layout_marginLeft="10sp"
        android:textSize="20sp"
        />
    
    <TextView 
        android:id="@+id/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinates"
        android:layout_alignParentLeft="true"
        android:text="@string/label_address" />
    
    <TextView 
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinates"
        android:layout_toRightOf="@id/label_address"
        android:layout_marginLeft="10sp"
        android:textSize="20sp" />
            
    <ProgressBar 
        android:id="@+id/location_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone"/>
    
    <TextView 
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:layout_alignParentLeft="true"
        android:text="@string/label_unknown"/>
    
    <TextView 
        android:id="@+id/text_connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text_connection_status"
        android:text="@string/label_unknown"/>
    
    <Button 
        android:id="@+id/get_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_connection_state"
        android:text="@string/label_get_coordinates"
        android:onClick="getLocation"/>
    
    <Button 
        android:id="@+id/get_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/get_location_button"
        android:text="@string/label_get_address"
        android:onClick="getAddress"/>

</RelativeLayout>
